// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Component navigation sidebar for: Integration 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="pf-v6-c-page__sidebar"
    id="vertical-sidebar"
  >
    <div
      class="pf-v6-c-page__sidebar-main"
    >
      <div
        class="pf-v6-c-page__sidebar-body"
      >
        <nav
          aria-label="Default global nav"
          class="pf-v6-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-_r_1t_"
          data-ouia-component-type="PF6/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item pf-m-expanded pf-m-current"
              data-ouia-component-id="OUIA-Generated-NavExpandable-_r_1v_"
              data-ouia-component-type="PF6/NavExpandable"
              data-ouia-safe="true"
              data-testid="Visualization"
            >
              <button
                aria-expanded="true"
                class="pf-v6-c-nav__link"
                id="Visualization"
              >
                Visualization
                <span
                  class="pf-v6-c-nav__toggle"
                >
                  <span
                    class="pf-v6-c-nav__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <section
                aria-labelledby="Visualization"
                class="pf-v6-c-nav__subnav"
              >
                <ul
                  class="pf-v6-c-nav__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_20_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      aria-current="page"
                      class="pf-v6-c-nav__link pf-m-current"
                      data-discover="true"
                      data-testid="Design"
                      href="/"
                    >
                      Design
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_21_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Source Code"
                      href="/code"
                    >
                      Source Code
                    </a>
                  </li>
                </ul>
              </section>
            </li>
            <li
              class="pf-v6-c-nav__item pf-m-expanded"
              data-ouia-component-id="OUIA-Generated-NavExpandable-_r_23_"
              data-ouia-component-type="PF6/NavExpandable"
              data-ouia-safe="true"
              data-testid="Rest"
            >
              <button
                aria-expanded="true"
                class="pf-v6-c-nav__link"
                id="Rest"
              >
                Rest
                <span
                  class="pf-v6-c-nav__toggle"
                >
                  <span
                    class="pf-v6-c-nav__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <section
                aria-labelledby="Rest"
                class="pf-v6-c-nav__subnav"
              >
                <ul
                  class="pf-v6-c-nav__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_24_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Import"
                      href="/rest/import"
                    >
                      Import
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_25_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Editor"
                      href="/rest"
                    >
                      Editor
                    </a>
                  </li>
                </ul>
              </section>
            </li>
            <li
              class="pf-v6-c-nav__item pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_26_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Beans"
                href="/beans"
              >
                Beans
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_27_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Metadata"
                href="/metadata"
              >
                Metadata
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_28_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Pipe ErrorHandler"
                href="/pipe-error-handler"
              >
                Pipe ErrorHandler
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_29_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="DataMapper"
                href="/datamapper"
              >
                DataMapper
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_2a_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Catalog"
                href="/catalog"
              >
                Catalog
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navigation Component navigation sidebar for: Kamelet 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="pf-v6-c-page__sidebar"
    id="vertical-sidebar"
  >
    <div
      class="pf-v6-c-page__sidebar-main"
    >
      <div
        class="pf-v6-c-page__sidebar-body"
      >
        <nav
          aria-label="Default global nav"
          class="pf-v6-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-_r_g_"
          data-ouia-component-type="PF6/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item pf-m-expanded pf-m-current"
              data-ouia-component-id="OUIA-Generated-NavExpandable-_r_i_"
              data-ouia-component-type="PF6/NavExpandable"
              data-ouia-safe="true"
              data-testid="Visualization"
            >
              <button
                aria-expanded="true"
                class="pf-v6-c-nav__link"
                id="Visualization"
              >
                Visualization
                <span
                  class="pf-v6-c-nav__toggle"
                >
                  <span
                    class="pf-v6-c-nav__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <section
                aria-labelledby="Visualization"
                class="pf-v6-c-nav__subnav"
              >
                <ul
                  class="pf-v6-c-nav__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_j_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      aria-current="page"
                      class="pf-v6-c-nav__link pf-m-current"
                      data-discover="true"
                      data-testid="Design"
                      href="/"
                    >
                      Design
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_k_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Source Code"
                      href="/code"
                    >
                      Source Code
                    </a>
                  </li>
                </ul>
              </section>
            </li>
            <li
              class="pf-v6-c-nav__item pf-m-expanded pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavExpandable-_r_m_"
              data-ouia-component-type="PF6/NavExpandable"
              data-ouia-safe="true"
              data-testid="Rest"
              hidden=""
            >
              <button
                aria-expanded="true"
                class="pf-v6-c-nav__link"
                id="Rest"
              >
                Rest
                <span
                  class="pf-v6-c-nav__toggle"
                >
                  <span
                    class="pf-v6-c-nav__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <section
                aria-labelledby="Rest"
                class="pf-v6-c-nav__subnav"
              >
                <ul
                  class="pf-v6-c-nav__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_n_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Import"
                      href="/rest/import"
                    >
                      Import
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_o_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Editor"
                      href="/rest"
                    >
                      Editor
                    </a>
                  </li>
                </ul>
              </section>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_p_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Beans"
                href="/beans"
              >
                Beans
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_q_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Metadata"
                href="/metadata"
              >
                Metadata
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_r_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Pipe ErrorHandler"
                href="/pipe-error-handler"
              >
                Pipe ErrorHandler
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_s_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="DataMapper"
                href="/datamapper"
              >
                DataMapper
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_t_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Catalog"
                href="/catalog"
              >
                Catalog
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navigation Component navigation sidebar for: KameletBinding 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="pf-v6-c-page__sidebar"
    id="vertical-sidebar"
  >
    <div
      class="pf-v6-c-page__sidebar-main"
    >
      <div
        class="pf-v6-c-page__sidebar-body"
      >
        <nav
          aria-label="Default global nav"
          class="pf-v6-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-_r_1e_"
          data-ouia-component-type="PF6/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item pf-m-expanded pf-m-current"
              data-ouia-component-id="OUIA-Generated-NavExpandable-_r_1g_"
              data-ouia-component-type="PF6/NavExpandable"
              data-ouia-safe="true"
              data-testid="Visualization"
            >
              <button
                aria-expanded="true"
                class="pf-v6-c-nav__link"
                id="Visualization"
              >
                Visualization
                <span
                  class="pf-v6-c-nav__toggle"
                >
                  <span
                    class="pf-v6-c-nav__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <section
                aria-labelledby="Visualization"
                class="pf-v6-c-nav__subnav"
              >
                <ul
                  class="pf-v6-c-nav__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_1h_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      aria-current="page"
                      class="pf-v6-c-nav__link pf-m-current"
                      data-discover="true"
                      data-testid="Design"
                      href="/"
                    >
                      Design
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_1i_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Source Code"
                      href="/code"
                    >
                      Source Code
                    </a>
                  </li>
                </ul>
              </section>
            </li>
            <li
              class="pf-v6-c-nav__item pf-m-expanded pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavExpandable-_r_1k_"
              data-ouia-component-type="PF6/NavExpandable"
              data-ouia-safe="true"
              data-testid="Rest"
              hidden=""
            >
              <button
                aria-expanded="true"
                class="pf-v6-c-nav__link"
                id="Rest"
              >
                Rest
                <span
                  class="pf-v6-c-nav__toggle"
                >
                  <span
                    class="pf-v6-c-nav__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <section
                aria-labelledby="Rest"
                class="pf-v6-c-nav__subnav"
              >
                <ul
                  class="pf-v6-c-nav__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_1l_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Import"
                      href="/rest/import"
                    >
                      Import
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_1m_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Editor"
                      href="/rest"
                    >
                      Editor
                    </a>
                  </li>
                </ul>
              </section>
            </li>
            <li
              class="pf-v6-c-nav__item pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1n_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Beans"
                href="/beans"
              >
                Beans
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1o_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Metadata"
                href="/metadata"
              >
                Metadata
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1p_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Pipe ErrorHandler"
                href="/pipe-error-handler"
              >
                Pipe ErrorHandler
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1q_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="DataMapper"
                href="/datamapper"
              >
                DataMapper
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1r_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Catalog"
                href="/catalog"
              >
                Catalog
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navigation Component navigation sidebar for: Pipe 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="pf-v6-c-page__sidebar"
    id="vertical-sidebar"
  >
    <div
      class="pf-v6-c-page__sidebar-main"
    >
      <div
        class="pf-v6-c-page__sidebar-body"
      >
        <nav
          aria-label="Default global nav"
          class="pf-v6-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-_r_v_"
          data-ouia-component-type="PF6/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item pf-m-expanded pf-m-current"
              data-ouia-component-id="OUIA-Generated-NavExpandable-_r_11_"
              data-ouia-component-type="PF6/NavExpandable"
              data-ouia-safe="true"
              data-testid="Visualization"
            >
              <button
                aria-expanded="true"
                class="pf-v6-c-nav__link"
                id="Visualization"
              >
                Visualization
                <span
                  class="pf-v6-c-nav__toggle"
                >
                  <span
                    class="pf-v6-c-nav__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <section
                aria-labelledby="Visualization"
                class="pf-v6-c-nav__subnav"
              >
                <ul
                  class="pf-v6-c-nav__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_12_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      aria-current="page"
                      class="pf-v6-c-nav__link pf-m-current"
                      data-discover="true"
                      data-testid="Design"
                      href="/"
                    >
                      Design
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_13_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Source Code"
                      href="/code"
                    >
                      Source Code
                    </a>
                  </li>
                </ul>
              </section>
            </li>
            <li
              class="pf-v6-c-nav__item pf-m-expanded pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavExpandable-_r_15_"
              data-ouia-component-type="PF6/NavExpandable"
              data-ouia-safe="true"
              data-testid="Rest"
              hidden=""
            >
              <button
                aria-expanded="true"
                class="pf-v6-c-nav__link"
                id="Rest"
              >
                Rest
                <span
                  class="pf-v6-c-nav__toggle"
                >
                  <span
                    class="pf-v6-c-nav__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <section
                aria-labelledby="Rest"
                class="pf-v6-c-nav__subnav"
              >
                <ul
                  class="pf-v6-c-nav__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_16_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Import"
                      href="/rest/import"
                    >
                      Import
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_17_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Editor"
                      href="/rest"
                    >
                      Editor
                    </a>
                  </li>
                </ul>
              </section>
            </li>
            <li
              class="pf-v6-c-nav__item pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_18_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Beans"
                href="/beans"
              >
                Beans
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_19_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Metadata"
                href="/metadata"
              >
                Metadata
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1a_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Pipe ErrorHandler"
                href="/pipe-error-handler"
              >
                Pipe ErrorHandler
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1b_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="DataMapper"
                href="/datamapper"
              >
                DataMapper
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1c_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Catalog"
                href="/catalog"
              >
                Catalog
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navigation Component navigation sidebar for: Route 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="pf-v6-c-page__sidebar"
    id="vertical-sidebar"
  >
    <div
      class="pf-v6-c-page__sidebar-main"
    >
      <div
        class="pf-v6-c-page__sidebar-body"
      >
        <nav
          aria-label="Default global nav"
          class="pf-v6-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-_r_1_"
          data-ouia-component-type="PF6/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item pf-m-expanded pf-m-current"
              data-ouia-component-id="OUIA-Generated-NavExpandable-_r_3_"
              data-ouia-component-type="PF6/NavExpandable"
              data-ouia-safe="true"
              data-testid="Visualization"
            >
              <button
                aria-expanded="true"
                class="pf-v6-c-nav__link"
                id="Visualization"
              >
                Visualization
                <span
                  class="pf-v6-c-nav__toggle"
                >
                  <span
                    class="pf-v6-c-nav__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <section
                aria-labelledby="Visualization"
                class="pf-v6-c-nav__subnav"
              >
                <ul
                  class="pf-v6-c-nav__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_4_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      aria-current="page"
                      class="pf-v6-c-nav__link pf-m-current"
                      data-discover="true"
                      data-testid="Design"
                      href="/"
                    >
                      Design
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_5_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Source Code"
                      href="/code"
                    >
                      Source Code
                    </a>
                  </li>
                </ul>
              </section>
            </li>
            <li
              class="pf-v6-c-nav__item pf-m-expanded"
              data-ouia-component-id="OUIA-Generated-NavExpandable-_r_7_"
              data-ouia-component-type="PF6/NavExpandable"
              data-ouia-safe="true"
              data-testid="Rest"
            >
              <button
                aria-expanded="true"
                class="pf-v6-c-nav__link"
                id="Rest"
              >
                Rest
                <span
                  class="pf-v6-c-nav__toggle"
                >
                  <span
                    class="pf-v6-c-nav__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <section
                aria-labelledby="Rest"
                class="pf-v6-c-nav__subnav"
              >
                <ul
                  class="pf-v6-c-nav__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_8_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Import"
                      href="/rest/import"
                    >
                      Import
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-_r_9_"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                      data-discover="true"
                      data-testid="Editor"
                      href="/rest"
                    >
                      Editor
                    </a>
                  </li>
                </ul>
              </section>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_a_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Beans"
                href="/beans"
              >
                Beans
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_b_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Metadata"
                href="/metadata"
              >
                Metadata
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item pf-v6-u-hidden"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_c_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Pipe ErrorHandler"
                href="/pipe-error-handler"
              >
                Pipe ErrorHandler
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_d_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="DataMapper"
                href="/datamapper"
              >
                DataMapper
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_e_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                data-discover="true"
                data-testid="Catalog"
                href="/catalog"
              >
                Catalog
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
